tests/ui/reachable/expr_repeat.stderr
error: unreachable expression
  --> $DIR/expr_repeat.rs:9:25
   |
LL |     let x: [usize; 2] = [return; 2];
   |                         ^------^^^^
   |                         ||
   |                         |any code following this expression is unreachable
   |                         unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_repeat.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

